[package]
name = "select_example"
version = "0.1.0"
authors = ["Sam Wilson <sam.wilson@consensys.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0-alpha.6", features = ["process"] }
futures-util-preview = "0.3.0-alpha.19"
